# ai-tg-bot

./: .env.example  Justfile  Makefile  alembic.ini  pyproject.toml
bot/: balance.py  config.py  errors.py  filters.py  generators.py  keyboards.py  main.py  middlewares.py  surveys.py
bot/db/: core.py  models.py  queries.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 1722692519_ba048aae0146_create_users_table.py  1723041062_d5c642daaf2c_add_balance_to_users.py  1723041798_cad30a82c53f_create_ai_types_table.py  1723041908_3b7cb2841912_create_ai_models_table.py  1723042021_0fc83e0cdbdc_add_text_ai_type.py  1723044416_58ccaf27d502_add_ai_models.py  1723280327_7390f063c332_add_image_ai_type.py  1723280382_bfb6917f1300_add_image_ai_models.py
bot/handlers/: __init__.py  admin.py  chat_survey.py  commands.py  image_survey.py
