[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.4.0"
aiogram = "^3.10.0"
openai = "^1.38.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.31" }
alembic = "^1.13.2"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
pre-commit = "^3.8.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "UP", "ANN", "S"]
ignore = ["ANN101"]
